<resources>
    <string name="app_name">Synthium</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="zero">0:00</string>
    <string name="add_song">Add Song</string>
    <string name="song_name">Song Name</string>
    <string name="song_artist">Song Artist</string>
    <string name="length_minutes">Length Minutes</string>
    <string name="length_seconds">Length Seconds</string>
    <string name="url_mp3">URL (.mp3)</string>
    <string name="add">Add</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="home">Home</string>
    <string name="Updated">Updated\!</string>
    <string name="Deleted">Deleted\!</string>
    <string name="Created">Created\!</string>
    <string name="An_error">An Error Has Occurred\!</string>
    <string name="Areyousureyouwanttodeletethissong">Are you sure you want to delete this song?</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="EnterSongName">Enter Song Name</string>
    <string name="EnterSongArtist">Enter Song Artist</string>
    <string name="EnterSongLengthMin">Enter Song Length Minutes</string>
    <string name="EnterSongLengthSec">Enter Song Length Seconds</string>
    <string name="EnterInValues">Please fill in all available fields before submitting</string>

</resources>
